<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activities.LoginActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:padding="5dp"
        app:srcCompat="@mipmap/ic_logo_round" />
    <TextView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/loginTitle"
        android:layout_weight="0.1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/loginUser"
        android:layout_weight="0.1"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"
        android:layout_weight="0.1"/>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginSwitch"
        android:checked="true"
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:layout_weight="0.05"/>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginRegistrer"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginForgot"
        android:layout_weight="0.1"/>


</LinearLayout>